--- a/interface.html
+++ b/interface.html
@@ -29,7 +29,7 @@ background-position: top center;
 
 #heading .h1 { 
     padding: 15px;
-    font-size: 20px;
+    font-size: 80px;
     text-transform: uppercase;
 }
 
@@ -92,10 +92,13 @@ background-position: top center;
     border: 5px solid black;
     padding: 15px;
 }
+.titulo {
+    font-size: 100px;
+    }
     </style>
        <header id="heading">
         <h1>
-            <a href="#">Meu Roteiro - P.R.I.C.O.</a>
+            <a class="titulo" href="#">Meu Roteiro - P.R.I.C.O.</a>
         </h1>
        </header>
     
