--- a/interface.html
+++ b/interface.html
@@ -37,6 +37,7 @@ background-position: top center;
     color: #fff; 
     text-decoration: none;
     font-family: sans-serif;
+    margin: 30px;
 }
 .section-one {
     background: deeppink;
@@ -47,6 +48,8 @@ background-position: top center;
     height: 150px;
     border: 5px solid black;
     padding: 15px;
+    margin: 10px;
+    margin-left: 1000px;
 }
 
 .section-two {
@@ -58,6 +61,7 @@ background-position: top center;
     height: 150px;
     border: 5px solid black;
     padding: 15px;
+    margin-left: 500px;
 }
 
 .section-three {
@@ -69,6 +73,7 @@ background-position: top center;
     height: 150px;
     border: 5px solid black;
     padding: 15px;
+    margin-left: 1000px;
 }
 
 .section-four {
@@ -80,6 +85,7 @@ background-position: top center;
     height: 150px;
     border: 5px solid black;
     padding: 15px;
+    margin-left: 500px;
 }
 
 .section-five {
@@ -91,6 +97,7 @@ background-position: top center;
     height: 150px;
     border: 5px solid black;
     padding: 15px;
+    margin-left: 1000px;
 }
 .titulo {
     font-size: 100px;
