--- a/interface.html
+++ b/interface.html
@@ -23,9 +23,8 @@ background-position: top center;
 
 #heading {
     display: flex;
-    background: #e50914;
-    justify-content: center;  
-}
+    justify-content: center; 
+  }
 
 #heading .h1 { 
     padding: 15px;
@@ -102,13 +101,18 @@ background-position: top center;
 .titulo {
     font-size: 100px;
     }
-    </style>
+    .section-one {
+        font-size: 50px;
+    }
+
+      </style>
        <header id="heading">
         <h1>
             <a class="titulo" href="#">Meu Roteiro - P.R.I.C.O.</a>
         </h1>
        </header>
-    
+
+         
 </head>
 <body>
 <section class="section-one">Propósitos</section>
