--- a/interface.html
+++ b/interface.html
@@ -51,6 +51,7 @@ background-position: top center;
     margin-left: 1000px;
 }
 
+
 .section-two {
     background: cyan;
     background-image: url(https://w7.pngwing.com/pngs/890/845/png-transparent-computer-network-internet-business-networking-network-computer-network-angle-company-thumbnail.png);
@@ -105,6 +106,21 @@ background-position: top center;
         font-size: 50px;
     }
 
+    .section-two {
+        font-size: 50px;
+    }
+
+    .section-three {
+        font-size: 50px;
+    }
+
+    .section-four {
+        font-size: 35px;
+    }
+
+    .section-five {
+        font-size: 50px;
+    }
       </style>
        <header id="heading">
         <h1>
@@ -120,6 +136,7 @@ background-position: top center;
 <section class="section-three">Interesses</section>
 <section class="section-four">Competências</section>
 <section class="section-five">Orgulho</section>
+
 
 
 </body>
