--- a/interface.html
+++ b/interface.html
@@ -49,6 +49,7 @@ background-position: top center;
     padding: 15px;
     margin: 10px;
     margin-left: 1000px;
+    
 }
 
 
@@ -131,13 +132,11 @@ background-position: top center;
          
 </head>
 <body>
-<section class="section-one">Propósitos</section>
-<section class="section-two">Redes</section>
-<section class="section-three">Interesses</section>
-<section class="section-four">Competências</section>
-<section class="section-five">Orgulho</section>
-
-
+<section class="section-one"><a href="propositos.html">Propósitos</a></section>
+<section class="section-two"><a href="redes.html">Redes</a></section>
+<section class="section-three"><a href="interessses.html">Interesses</a></section>
+<section class="section-four"><a href="competencias.html">Competências</a></section>
+<section class="section-five"><a href="orgulho.html">Orgulho</a></section>
 
 </body>
 </html> 
