--- a/competencias.html
+++ b/competencias.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Competências</title>
+    <title>Competências:</title>
+    <style>
+        body {
+            background-color: black;
+            
+        }
+        h1 {
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <h1>COMPETÊNCIAS</h1>
+    <h1>Algumas das minhas COMPETÊNCIAS:</h1>
+    <h2><a href="interface.html">Voltar</a></h2>
 </body>
 </html>
