--- a/propositos.html
+++ b/propositos.html
@@ -16,8 +16,9 @@
     </style>
 </head>
 <body>
-    <h1>Propósitos</h1>
-</body>
+    <h1>Lista dos meus Propósitos</h1>
+    <h2><a href="interface.html">Voltar</a></h2>
+    </body>
 
            
 </html>
