--- a/redes.html
+++ b/redes.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redes</title>
+    <style>
+        body {
+            background-color: black;
+            
+        }
+        h1 {
+            color: white;
+        }
+    </style>
 </head>
 <body>
- <h1>REDES</h1>   
+ <h1>Ralação das minhas REDES</h1>  
+ <h2><a href="interface.html">Voltar</a></h2> 
 </body>
 </html>
