--- a/orgulho.html
+++ b/orgulho.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>orgulho</title>
+    <style>
+        body {
+            background-color: black;
+            
+        }
+        h1 {
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <h1>ORGULHO</h1>
+    <h1>Em minha vida, tenho ORGULHO de:</h1>
+    <h2><a href="interface.html">Voltar</a></h2>
 </body>
 </html>
